# c5

./: .example_env  README.md  config.py  main.py  pyproject.toml  tools.py
dump/: api.py  dump_vacancies.py  queries.sql
entity/: database.py  hh.py
storage/: db.py  headhunter.py  interface.py  pg.py
